@@ -1,6 +1,11 @@
 2025-08-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Escape control characters in report and log output (CVE-2025-54389),
 	  thanks to Rajesh Pangare for reporting this issue
+	* Fix null pointer dereference after reading incorrectly encoded xattr
+	  attributes from database (CVE-2025-54409)
+	  - fix handling of empty xattr values
+	  - fix handling of xattr keys containing a comma
+	  - thanks to Rajesh Pangare for reporting this issue
 
 2025-07-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Release aide 0.19.1
